# shnippet

./: Cargo.toml  LICENCE  Readme.md
src/: commands.rs  constants.rs  main.rs  util.rs
