[package]
name = "shnippet"
version = "0.1.0"
authors = ["Yashodhan Joshi <yjdoc2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
console = "0.14.1"
clap = "2.33.3"
dialoguer = "0.8.0"
sanitize-filename = "0.3.0"
dirs = "3.0.2"
