[package]
name = "shnippet"
version = "0.1.0"
authors = ["Yashodhan Joshi <yjdoc2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
console = "0.15"
clap = { version = "4", features = [ "string" ] }
clap_complete = "4"
dialoguer = "0.10"
sanitize-filename = "0.4"
dirs = "4"
